...
        android:background="@drawable/card_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/circularProgressButton"
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:contentDescription="Increment water progress"
            android:onClick="incrementAndUpdateWaterTracker"
...
            android:max="8"
            app:indicatorColor="@color/water_blue"
            app:indicatorSize="58dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/lblHours"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblGreetings"
            app:trackColor="@color/white"
            app:trackCornerRadius="100dp"
            app:trackThickness="5dp" />

        <TextView
            android:id="@+id/lblGreetings"
...
